Added functionality so that we can read the problem from a text file.
The problem still has a bug. It is failing with the problem described at problem.txt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,11 @@
         "iosfwd": "cpp",
         "iterator": "cpp",
         "limits": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "__locale": "cpp",
+        "unordered_map": "cpp",
+        "utility": "cpp",
+        "string": "cpp",
+        "istream": "cpp"
     }
 }
